# family-feud-applicaiton

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: BuzzerScreen.jsx  DisplayBoard.jsx  HostPanel.jsx  JoinScreen.jsx  PlayerList.jsx
frontend/src/hooks/: useWebSocket.js
server/: Cargo.toml
server/data/questions/: easy_questions.json  questions.json
server/src/: handlers.rs  host_handlers.rs  main.rs  models.rs  player_handlers.rs  readers.rs  state.rs
test/: test_server.py
