[package]
name = "buzzer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2.22", features = ["v4"] }
futures = "0.3"